# agent-claw

./: Cargo.toml  package.json  pnpm-lock.yaml
crates/db/migrations/: 20260307000001_openclaw_planner.sql  20260307000002_openclaw_orchestrator.sql  20260307000003_openclaw_qa.sql  20260307000004_openclaw_planner_context.sql  20260307000005_openclaw_task_prompt.sql
crates/local-deployment/: Cargo.toml
crates/local-deployment/src/: container.rs  lib.rs
crates/openclaw-orchestrator/: Cargo.toml
crates/openclaw-orchestrator/src/: dependency_graph.rs  hook.rs  lib.rs  orchestrator.rs  types.rs
crates/openclaw-planner/: Cargo.toml
crates/openclaw-planner/src/: context.rs  dedup.rs  dependency.rs  lib.rs  llm.rs  planner.rs  types.rs
crates/openclaw-qa/: Cargo.toml
crates/openclaw-qa/src/: lib.rs  qa_runner.rs  test_detector.rs  types.rs
crates/relay-control/src/: signing.rs
crates/server/: Cargo.toml
crates/server/src/routes/: mod.rs  openclaw.rs
plans/: SETUP.md  openclaw.md  roadmap.md
