[package]
name = "openclaw-planner"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
services = { path = "../services" }
executors = { path = "../executors" }
utils = { path = "../utils" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
ts-rs = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "chrono", "uuid"] }
